Game form added and minor back end fixes

--- a/Themes/mythical_labyrinth_escape/templates/success_puzzle2.html
+++ b/Themes/mythical_labyrinth_escape/templates/success_puzzle2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Answer {{puzzle_2.id}}</title>
+    <title>Answer {{puzzle.id}}</title>
 </head>
 <body>
     <h3>You collapse to your knees as you stumble out of the maze, sounds of rustling leaves and chittering creatures come from the shadows of the bushes.</h3>
