--- a/Themes/mythical_labyrinth_escape/templates/success_puzzle3.html
+++ b/Themes/mythical_labyrinth_escape/templates/success_puzzle3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Answer {{puzzle_2.id}}</title>
+    <title>Answer {{puzzle.id}}</title>
 </head>
 <body>
     <h3>Nothing. You just shouted the phrase and are starting to think you got it wrong when you hear a soft click and the gate drifts open. You leap forward and push through the gate, stumbling and falling as you make it through.</h3>
@@ -14,6 +14,6 @@
         <h3>You look in disbelief from the fairy to the witch and back.</h3>
         <h3>The fairy heaves a big sigh and pats you on the head. “Fret not, silly human. She won’t bother anybody ever again.” The tiny creature said with a terrifying smile. “Now run along before I decide to keep you, too – you’ve been quite entertaining.”</h3>
         <h3>The sound of the fairy’s giggles follow you as you run as fast as your feet can carry you through the rest of the forest.</h3>
-        <a href="/mythical_labyrinth_escape/results">View Results</a>
+        <a href="/mythical_labyrinth_escape/results/1">View Results</a>
 </body>
 </html>
