--- a/themes/mythical_labyrinth_escape/templates/puzzle3.html
+++ b/themes/mythical_labyrinth_escape/templates/puzzle3.html
@@ -49,11 +49,11 @@
                     <div id="left" class="bg-light text-center text-dark ml-2" style="height:100px; width:100%; display:inline-block;">
                         <div>
                             <p>Hint:</p>
-                            {{this_puzzle.hint}}
+                            {{puzzle.hint}}
                         </div>
                     </div>
                     <div id="left" class="col-sm-12 bg-light text-center text-dark ml-2" style="height:300px; width:100%; display:inline-block;">
-                        <div>{{this_puzzle.story}}</div>
+                        <div>{{puzzle.story}}</div>
                     </div>
                     <div id="left" class="col-sm-12 bg-light text-center text-dark ml-2" style="height:150px; width:100%; display:inline-block;">
                         <div>Inventory</div>
@@ -72,7 +72,7 @@
                             <p>H_ _ _ &nbsp;  _ _ &nbsp; e _ _ _, &nbsp; _ _ _ &nbsp; _o &nbsp; _ v _ _, &nbsp; s _ _ _ _ &nbsp; _ _ &nbsp; _ _ _l.</p>
                         </div>
                         <div class="col-sm-4 d-inline-block bg-light text-dark ml-2" style="height:150px;">
-                            <form action="{{this_puzzle.id}}/answer_3" method="POST">
+                            <form action="{{puzzle.id}}/answer" method="POST">
                                 {% csrf_token %}
                                 <input type="text" id="answer" name="answer">
                                 <input type="submit" value="Solve Riddle">
