--- a/virtual_escape_room_app/templates/get_data.html
+++ b/virtual_escape_room_app/templates/get_data.html
@@ -38,14 +38,12 @@
         </div>
         
         <div class="row">
-            <h2>Theme</h2>
+            <h2>Themes</h2>
             <table id="tabletheme" class="table table-striped table-bordered">
                 <tr>
                     <th>ID</th>
                     <th>Title</th>
                     <th>Description</th>
-                    <th>Status</th>
-                    <th>Player</th>
                     <th>Created Date</th>
                     <th>Actions</th>
                 </tr>
@@ -54,8 +52,6 @@
                     <td>{{ one_theme.id }}</td>
                     <td>{{ one_theme.title }}</td>
                     <td>{{ one_theme.description }}</td>
-                    <td>{{ one_theme.status }}</td>
-                    <td>{{ one_theme.player.username }}</td>
                     <td>{{ one_theme.created_at }}</td>
                     <td class="text-center">
                         <a href="/theme/remove/{{one_theme.id}}" class="font-weight-bold">Remove</a>
@@ -72,10 +68,10 @@
             <table id="tablepuzzle" class="table table-striped table-bordered">
                 <tr>
                     <th>ID</th>
+                    <th>Theme</th>
                     <th>Question</th>
                     <th>Hint</th>
                     <th>Story</th>
-                    <th>Status</th>
                     <th>Answer</th>
                     <th>Created Date</th>
                     <th>Actions</th>
@@ -83,10 +79,10 @@
                 {% for one_puzzle in querypuzzles %}
                 <tr>
                     <td>{{ one_puzzle.id }}</td>
+                    <td>{{ one_puzzle.theme.title }}</td>
                     <td>{{ one_puzzle.question }}</td>
                     <td>{{ one_puzzle.hint }}</td>
                     <td>{{ one_puzzle.story }}</td>
-                    <td>{{ one_puzzle.status }}</td>
                     <td>{{ one_puzzle.answer }}</td>
                     <td>{{ one_puzzle.created_at }}</td>
                     <td class="text-center">
@@ -98,6 +94,37 @@
                 {% endfor %}
             </table>
         </div>
+
+        <div class="row">
+            <h2>Games</h2>
+            <table id="tablegame" class="table table-striped table-bordered">
+                <tr>
+                    <th>ID</th>
+                    <th>Username</th>
+                    <th>Theme</th>
+                    <th>Status</th>
+                    <th>Time</th>
+                    <th>Created Date</th>
+                    <th>Actions</th>
+                </tr>
+                {% for one_game in querygames %}
+                <tr>
+                    <td>{{ one_game.id }}</td>
+                    <td>{{ one_game.players.username }}</td>
+                    <td>{{ one_game.theme.title }}</td>
+                    <td>{{ one_game.status }}</td>
+                    <td>{{ one_game.timer }}</td>
+                    <td>{{ one_game.created_at }}</td>
+                    <td class="text-center">
+                        <a href="/game/remove/{{one_game.id}}" class="font-weight-bold">Remove</a>
+                        |
+                        <a href="/game/edit/{{one_game.id}}" class="font-weight-bold">Edit</a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </table>
+        </div>
+
         <div class="row mt-4">
             <div class="col mr-2">
                 <h3>Player Add</h3>
@@ -135,10 +162,13 @@
                     </div>
                 </form>
             </div>
-            <div class="col">
+            <div class="col mr-2">
                 <h3>Puzzle Add</h3>
                 <form action="/puzzle/add" method="post">
                     {% csrf_token %}
+                    <div class="form-group row">
+                        <input type="text" name="theme_id" id="theme_id" class="form-control" placeholder="Theme ID">
+                    </div>
                     <div class="form-group row">
                         <input type="text" name="question" id="question" class="form-control" placeholder="Question">
                     </div>
@@ -150,6 +180,27 @@
                     </div>
                     <div class="form-group row">
                         <input type="text" name="answer" id="answer" class="form-control" placeholder="Answer">
+                    </div>
+                    <div class="row justify-content-center">
+                        <button type="submit" class="col-6 btn btn-secondary">Submit</button>
+                    </div>
+                </form>
+            </div>
+            <div class="col">
+                <h3>Game Add</h3>
+                <form action="/game/add" method="post">
+                    {% csrf_token %}
+                    <div class="form-group row">
+                        <input type="text" name="player_id" id="player_id" class="form-control" placeholder="Player ID">
+                    </div>
+                    <div class="form-group row">
+                        <input type="text" name="theme_id" id="theme_id" class="form-control" placeholder="Theme ID">
+                    </div>
+                    <div class="form-group row">
+                        <input type="text" name="status" id="status" class="form-control" placeholder="Status">
+                    </div>
+                    <div class="form-group row">
+                        <input type="text" name="timer" id="timer" class="form-control" placeholder="Time">
                     </div>
                     <div class="row justify-content-center">
                         <button type="submit" class="col-6 btn btn-secondary">Submit</button>
