Results page updated and login page updated

--- a/themes/mythical_labyrinth_escape/templates/puzzle2.html
+++ b/themes/mythical_labyrinth_escape/templates/puzzle2.html
@@ -31,7 +31,7 @@
 
                     <!-- Timer Placeholder -->
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="btn btn-outline-light mx-1">Timer</a>
+                        <a class="btn btn-outline-light mx-1 text-white"> {{ request.session.timer }}</a>
                     </li>
         </div>
     </nav>
