--- a/themes/mythical_labyrinth_escape/templates/results.html
+++ b/themes/mythical_labyrinth_escape/templates/results.html
@@ -25,8 +25,8 @@
             <span class="navbar-brand js-scroll-trigger" href="#page-top">Result</span>
                 <!-- Play Again/Exit Placeholder -->
                 <li class="nav-item mx-0 mx-lg-1">
-                    <a class="btn btn-outline-light mx-1">Play Again</a>
-                    <a class="btn btn-outline-light mx-1">Exit Game</a>
+                    <a class="btn btn-outline-light mx-1" href="/virtual_escape_room">Play Again</a>
+                    <a class="btn btn-outline-light mx-1" href="/virtual_escape_room/logout">Exit Game</a>
                 </li>
         </div>
     </nav>
