--- a/themes/mythical_labyrinth_escape/templates/puzzle1.html
+++ b/themes/mythical_labyrinth_escape/templates/puzzle1.html
@@ -28,7 +28,7 @@
 
                     <!-- Timer Placeholder -->
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="btn btn-outline-light mx-1">Timer</a>
+                        <a id="timer" class="btn btn-outline-light mx-1 text-white"> {{ request.session.timer }}</a>
                     </li>
         </div>
     </nav>
@@ -107,5 +107,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <!-- Core theme JS-->
     <script src="{% static 'js/scripts.js' %}"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+        var interval = setInterval( increment, 1000);
+        function increment(){
+            i = i % 360 + 1;
+        }
+
+        $('#timer').change(function(){
+            if (this.value == 'doggy-boarding-drop-off 35')
+                $('#nights').show();
+            else
+                $('#nights').hide();
+        });
+    </script> -->
 </body>
 </html>
