--- a/Themes/mythical_labyrinth_escape/templates/success_puzzle2.html
+++ b/Themes/mythical_labyrinth_escape/templates/success_puzzle2.html
@@ -1,17 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Answer {{puzzle.id}}</title>
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Answer {{puzzle.id}}</title>
+        {% load static %}
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico' %}" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="{% static 'css/customstyles.css' %}" rel="stylesheet" />  
+        <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+        <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">  -->
+    </head>
 <body>
-    <h3>You collapse to your knees as you stumble out of the maze, sounds of rustling leaves and chittering creatures come from the shadows of the bushes.</h3>
-    <h3>“Well, safe to say you made it out of there not a moment too soon!” The fairy exclaimed as she floats around you, tsks and shakes her head at the maze.</h3>
-    <h3>You look up, refusing to glance behind you even though you can feel eyes on your back, and instead, look ahead across an open field of waist high grass, the sun starting to touch the horizon as it sets.</h3>
-    <h3>Across the field, you spy a silvery gate and jump to your feet with joy – the way out is just ahead!</h3>
-    <h3>“Well, well, almost there human! Better hurry before the sun sets!” The fairy said, most amused.</h3>
-    <h4>You take off in a dead run.</h4>
-    <a href="/mythical_labyrinth_escape/puzzle/3">Attempt Puzzle Three</a>
+  <!-- Title Nav Bar-->
+  <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav" style="background-color:black; opacity:60%;">
+    <div class="container">
+        <span class="navbar-brand js-scroll-trigger" href="#page-top">Enchanted Forest 1/3</span>
+
+                <!-- Timer Placeholder -->
+                <li class="nav-item mx-0 mx-lg-1">
+                    <a id="timer" class="btn btn-outline-light mx-1 text-white"> {{ request.session.timer }}</a>
+                </li>
+    </div>
+    </nav>
+
+    <!-- Video-->
+    <div class="video-background">
+        <div class="video-wrap">
+            <div id="video">
+                <video autoplay muted loop playsinline id="myVideo">
+                    <source src="{% static 'assets/vid/video.mp4' %}" type="video/mp4">
+                </video>
+            </div>
+        </div>
+    </div>
+
+    <!-- Middle Content-->
+    <div class="puzzle-container text-center">
+                <div class="col-sm-10 row" style="display:inline-block;">
+                    <h3>You collapse to your knees as you stumble out of the maze, sounds of rustling leaves and chittering creatures come from the shadows of the bushes.</h3>
+                    <h3>“Well, safe to say you made it out of there not a moment too soon!” The fairy exclaimed as she floats around you, tsks and shakes her head at the maze.</h3>
+                    <h3>You look up, refusing to glance behind you even though you can feel eyes on your back, and instead, look ahead across an open field of waist high grass, the sun starting to touch the horizon as it sets.</h3>
+                    <h3>Across the field, you spy a silvery gate and jump to your feet with joy – the way out is just ahead!</h3>
+                    <h3>“Well, well, almost there human! Better hurry before the sun sets!” The fairy said, most amused.</h3>
+                    <h4>You take off in a dead run.</h4>
+                    <a class="btn btn-outline-light mx-1" href="/mythical_labyrinth_escape/puzzle/3">Attempt Puzzle Three</a>
+                </div>
+    </div>
 </body>
 </html>
+
