--- a/themes/mythical_labyrinth_escape/templates/puzzle2.html
+++ b/themes/mythical_labyrinth_escape/templates/puzzle2.html
@@ -48,7 +48,7 @@
     </div>
 
     <!-- Middle Content-->
-    <div class="caption">
+    <div class="puzzle-container">
                 <div class="col-sm-3 row" style="display:inline-block;">
                     <div id="left" class="bg-light text-center text-dark ml-2" style="height:100px; width:100%; display:inline-block;">
                         <div>
@@ -76,7 +76,6 @@
                         <div id="ghost"></div>
                         <br>
                         <div id="score"></div>
-                        
                     </div>
 
                     <div class="col-sm-12 bg-light text-dark ml-2">
