--- a/virtual_escape_room_app/static/css/customstyles.css
+++ b/virtual_escape_room_app/static/css/customstyles.css
@@ -3,3 +3,18 @@
     width: 600px;
     background-color: pink;
 }
+
+.video-background {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+.puzzle-container {
+    position: absolute;
+    top: 15%;
+    width: 100%;
+    color: white;
+}
