added timer.js file to show timer and added the game update after puzzle 3

--- a/Themes/mythical_labyrinth_escape/templates/success_puzzle2.html
+++ b/Themes/mythical_labyrinth_escape/templates/success_puzzle2.html
@@ -55,6 +55,8 @@
                     <a class="btn btn-outline-light mx-1" href="/mythical_labyrinth_escape/puzzle/3">Attempt Puzzle Three</a>
                 </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="{% static 'js/timer.js' %}"></script>
 </body>
 </html>
 
