--- a/themes/mythical_labyrinth_escape/templates/puzzle1.html
+++ b/themes/mythical_labyrinth_escape/templates/puzzle1.html
@@ -107,19 +107,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <!-- Core theme JS-->
     <script src="{% static 'js/scripts.js' %}"></script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script>
-        var interval = setInterval( increment, 1000);
-        function increment(){
-            i = i % 360 + 1;
-        }
-
-        $('#timer').change(function(){
-            if (this.value == 'doggy-boarding-drop-off 35')
-                $('#nights').show();
-            else
-                $('#nights').hide();
-        });
-    </script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="{% static 'js/timer.js' %}"></script>
 </body>
 </html>
