--- a/themes/mythical_labyrinth_escape/templates/success_puzzle1.html
+++ b/themes/mythical_labyrinth_escape/templates/success_puzzle1.html
@@ -20,8 +20,8 @@
         <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">  -->
     </head>
 <body>
-  <!-- Title Nav Bar-->
-  <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav" style="background-color:black; opacity:60%;">
+    <!-- Title Nav Bar-->
+    <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav" style="background-color:black; opacity:60%;">
     <div class="container">
         <span class="navbar-brand js-scroll-trigger" href="#page-top">Enchanted Forest 1/3</span>
 
@@ -55,5 +55,8 @@
                             <a class="btn btn-outline-light mx-1" href="/mythical_labyrinth_escape/puzzle/2">Attempt Puzzle Two</a>
                 </div>
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="{% static 'js/timer.js' %}"></script>
 </body>
 </html>
