--- a/Themes/mythical_labyrinth_escape/templates/success_puzzle3.html
+++ b/Themes/mythical_labyrinth_escape/templates/success_puzzle3.html
@@ -53,8 +53,10 @@
             <h3>You look in disbelief from the fairy to the witch and back.</h3>
             <h3>The fairy heaves a big sigh and pats you on the head. “Fret not, silly human. She won’t bother anybody ever again.” The tiny creature said with a terrifying smile. “Now run along before I decide to keep you, too – you’ve been quite entertaining.”</h3>
             <h3>The sound of the fairy’s giggles follow you as you run as fast as your feet can carry you through the rest of the forest.</h3>
-            <a class="btn btn-outline-light mx-1" href="/mythical_labyrinth_escape/results/{{request.session.player_id}}">View Results</a>
+            <a class="btn btn-outline-light mx-1" href="/mythical_labyrinth_escape/update_game/{{request.session.game_id}}">View Results</a>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="{% static 'js/timer.js' %}"></script>
 </body>
 </html>
 
