--- a/themes/mythical_labyrinth_escape/templates/puzzle2.html
+++ b/themes/mythical_labyrinth_escape/templates/puzzle2.html
@@ -31,7 +31,7 @@
 
                     <!-- Timer Placeholder -->
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="btn btn-outline-light mx-1 text-white"> {{ request.session.timer }}</a>
+                        <a id="timer" class="btn btn-outline-light mx-1 text-white"> {{ request.session.timer }}</a>
                     </li>
         </div>
     </nav>
@@ -117,5 +117,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <!-- Core theme JS-->
     <script src="{% static 'js/scripts.js' %}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="{% static 'js/timer.js' %}"></script>
 </body>
 </html>
