--- a/themes/mythical_labyrinth_escape/templates/puzzle3.html
+++ b/themes/mythical_labyrinth_escape/templates/puzzle3.html
@@ -48,8 +48,8 @@
                 <div class="col-sm-3 row" style="display:inline-block;">
                     <div id="left" class="bg-light text-center text-dark ml-2" style="height:100px; width:100%; display:inline-block;">
                         <div>
-                            <p>Hint:</p>
-                            {{puzzle.hint}}
+                            <input type='button' class='toggleBtn' value='Show Hint'>
+                            <div class="textDiv"> </div>
                         </div>
                     </div>
                     <div id="left" class="col-sm-12 bg-light text-center text-dark ml-2" style="height:300px; width:100%; display:inline-block;">
@@ -98,5 +98,18 @@
     <script src="{% static 'js/scripts.js' %}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="{% static 'js/timer.js' %}"></script>
+    <script>
+        document
+            .querySelector(".toggleBtn")
+            .addEventListener("click", toggleText);
+        function toggleText() {
+            var x = document.querySelector(".textDiv");
+            if (x.innerHTML === " ") {
+                x.innerHTML = "H_ _ _ &nbsp;  _ _ &nbsp; e _ _ _, &nbsp; _ _ _ &nbsp; _o &nbsp; _ v _ _, &nbsp; s _ _ _ _ &nbsp; _ _ &nbsp; _ _ _l.";
+            } else {
+                x.innerHTML = " ";
+            }
+        }
+    </script>
 </body>
 </html>
