--- a/Themes/mythical_labyrinth_escape/templates/success_puzzle3.html
+++ b/Themes/mythical_labyrinth_escape/templates/success_puzzle3.html
@@ -20,8 +20,8 @@
         <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">  -->
     </head>
 <body>
-  <!-- Title Nav Bar-->
-  <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav" style="background-color:black; opacity:60%;">
+    <!-- Title Nav Bar-->
+    <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav" style="background-color:black; opacity:60%;">
     <div class="container">
         <span class="navbar-brand js-scroll-trigger" href="#page-top">Enchanted Forest 1/3</span>
 
@@ -57,6 +57,20 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="{% static 'js/timer.js' %}"></script>
+    <!-- <script>
+        var ajax_call = function(){
+            $('#timer').change(function(){
+                $.ajax({
+                    url: "/mythical_labyrinth_escape/timer",
+                    method: "GET"
+                })
+                .done(function(res){
+                    $('#timer').html(res)
+                })
+            })
+        }
+        
+    </script> -->
 </body>
 </html>
 
