changed txt on landing pg, some styling touches, fixed login

--- a/Themes/mythical_labyrinth_escape/templates/success_puzzle3.html
+++ b/Themes/mythical_labyrinth_escape/templates/success_puzzle3.html
@@ -23,7 +23,7 @@
     <!-- Title Nav Bar-->
     <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav" style="background-color:black; opacity:60%;">
     <div class="container">
-        <span class="navbar-brand js-scroll-trigger" href="#page-top">Enchanted Forest 1/3</span>
+        <span class="navbar-brand js-scroll-trigger" href="#page-top">Mythical Labyrinth Escape 3/3</span>
 
                 <!-- Timer Placeholder -->
                 <li class="nav-item mx-0 mx-lg-1">
@@ -45,15 +45,19 @@
 
     <!-- Middle Content-->
     <div class="puzzle-container text-center">
-        <h3>Nothing. You just shouted the phrase and are starting to think you got it wrong when you hear a soft click and the gate drifts open. You leap forward and push through the gate, stumbling and falling as you make it through.</h3>
-        <h3>“Smarter than I thought, human!” the fairy exclaims as she flits through after you. “You cut it a bit close though.” She mutters.
-            You look to see what she’s talking about and find the witch mere feet from the gate. Before you have a chance to do more than gasp, the fairy snaps her fingers and the gate slams shut, a string of light intertwines around the bars of the gate and cross, materializing into a chain and padlock.</h3>
-            <h3>The witch grabs the bars and pulls against them, trying futilely to force them open. She howled and sobbed in rage at the same time. “Oh human, help me! You have to help me!” the witch pleaded, reaching through the bars.</h3>
-            <h3>“Silly witch. Thought you could catch me!” The fairy crowed, flying tauntingly out of reach.</h3>
-            <h3>You look in disbelief from the fairy to the witch and back.</h3>
-            <h3>The fairy heaves a big sigh and pats you on the head. “Fret not, silly human. She won’t bother anybody ever again.” The tiny creature said with a terrifying smile. “Now run along before I decide to keep you, too – you’ve been quite entertaining.”</h3>
-            <h3>The sound of the fairy’s giggles follow you as you run as fast as your feet can carry you through the rest of the forest.</h3>
-            <a class="btn btn-outline-light mx-1" href="/mythical_labyrinth_escape/update_game/{{request.session.game_id}}">View Results</a>
+        <div class="col-sm-10 row" style="display:inline-block;">
+            <h3>Nothing. You just shouted the phrase and are starting to think you got it wrong when you hear a soft click and the gate drifts open. You leap forward and push through the gate, stumbling and falling as you make it through.</h3>
+            <h3>“Smarter than I thought, human!” the fairy exclaims as she flits through after you. “You cut it a bit close though.” She mutters.
+                You look to see what she’s talking about and find the witch mere feet from the gate. Before you have a chance to do more than gasp, the fairy snaps her fingers and the gate slams shut, a string of light intertwines around the bars of the gate and cross, materializing into a chain and padlock.</h3>
+                <h3>The witch grabs the bars and pulls against them, trying futilely to force them open. She howled and sobbed in rage at the same time. “Oh human, help me! You have to help me!” the witch pleaded, reaching through the bars.</h3>
+                <h3>“Silly witch. Thought you could catch me!” The fairy crowed, flying tauntingly out of reach.</h3>
+                <h3>You look in disbelief from the fairy to the witch and back.</h3>
+                <h3>The fairy heaves a big sigh and pats you on the head. “Fret not, silly human. She won’t bother anybody ever again.” The tiny creature said with a terrifying smile. “Now run along before I decide to keep you, too – you’ve been quite entertaining.”</h3>
+                <h3>The sound of the fairy’s giggles follow you as you run as fast as your feet can carry you through the rest of the forest.</h3>
+                <br>
+                <br>
+                <a class="btn btn-outline-light mx-1" href="/mythical_labyrinth_escape/update_game/{{request.session.game_id}}">View Results</a>
+            </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="{% static 'js/timer.js' %}"></script>
