--- a/themes/mythical_labyrinth_escape/templates/success_puzzle1.html
+++ b/themes/mythical_labyrinth_escape/templates/success_puzzle1.html
@@ -23,7 +23,7 @@
     <!-- Title Nav Bar-->
     <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav" style="background-color:black; opacity:60%;">
     <div class="container">
-        <span class="navbar-brand js-scroll-trigger" href="#page-top">Enchanted Forest 1/3</span>
+        <span class="navbar-brand js-scroll-trigger" href="#page-top">Mythical Labyrinth Escape 1/3</span>
 
                 <!-- Timer Placeholder -->
                 <li class="nav-item mx-0 mx-lg-1">
@@ -51,7 +51,8 @@
                         <h3>Finally, you hear a loud thunk and your heart jumps when you see the door crack open.</h3>
                         <h3>“Hurry, human!! We haven’t all day if you don’t want to be the main ingredient in her next spell!!”</h3>
                         <h3>As if you needed anymore encouragement to get out of here, you run to the door.</h3>
-                        <h4>You have successfully solved the puzzle! Click the link below to move on to the next level!</h4>
+                        <br>
+                        <br>
                             <a class="btn btn-outline-light mx-1" href="/mythical_labyrinth_escape/puzzle/2">Attempt Puzzle Two</a>
                 </div>
     </div>
