--- a/virtual_escape_room_app/templates/landing.html
+++ b/virtual_escape_room_app/templates/landing.html
@@ -165,11 +165,11 @@
 
         <!-- Middle Content -->
         <div class="caption text-center">
-            <h1>Enchanted Forest</h1>
-            <h3>Can you xscape it?</h3>
+            <h1>Mythical Labyrinth Escape</h1>
+            <h4 class="col-6 mx-auto">You've been captured by a witch who intends to use you for a spell - you will need to keep your wits about you in the challenges ahead to escape before it's too late! But fear not, you are not alone; a friendly fairy will help light your path... or will she?</h4>
             <!-- ***** Play Button should only show once the player successfully signs in ****-->
             {% if player %}
-                <a class="btn btn-outline-light mx-1" href="/virtual_escape_room/create_game">Play</a>
+                <a class="btn btn-outline-light mt-2" href="/virtual_escape_room/create_game">Play</a>
             {% endif %}
         </div>
 
