--- a/Themes/mythical_labyrinth_escape/templates/success_puzzle2.html
+++ b/Themes/mythical_labyrinth_escape/templates/success_puzzle2.html
@@ -23,7 +23,7 @@
   <!-- Title Nav Bar-->
   <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav" style="background-color:black; opacity:60%;">
     <div class="container">
-        <span class="navbar-brand js-scroll-trigger" href="#page-top">Enchanted Forest 1/3</span>
+        <span class="navbar-brand js-scroll-trigger" href="#page-top">Mythical Labyrinth Escape 2/3</span>
 
                 <!-- Timer Placeholder -->
                 <li class="nav-item mx-0 mx-lg-1">
@@ -51,7 +51,9 @@
                     <h3>You look up, refusing to glance behind you even though you can feel eyes on your back, and instead, look ahead across an open field of waist high grass, the sun starting to touch the horizon as it sets.</h3>
                     <h3>Across the field, you spy a silvery gate and jump to your feet with joy – the way out is just ahead!</h3>
                     <h3>“Well, well, almost there human! Better hurry before the sun sets!” The fairy said, most amused.</h3>
-                    <h4>You take off in a dead run.</h4>
+                    <h3>You take off in a dead run.</h3>
+                    <br>
+                    <br>
                     <a class="btn btn-outline-light mx-1" href="/mythical_labyrinth_escape/puzzle/3">Attempt Puzzle Three</a>
                 </div>
     </div>
