--- a/themes/mythical_labyrinth_escape/templates/puzzle1.html
+++ b/themes/mythical_labyrinth_escape/templates/puzzle1.html
@@ -24,7 +24,7 @@
     <!-- Title Nav Bar-->
     <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav" style="background-color:black; opacity:60%;">
         <div class="container">
-            <span class="navbar-brand js-scroll-trigger" href="#page-top">Enchanted Forest 1/3</span>
+            <span class="navbar-brand js-scroll-trigger" href="#page-top">Mythical Labyrinth Escape 1/3</span>
 
                     <!-- Timer Placeholder -->
                     <li class="nav-item mx-0 mx-lg-1">
