--- a/themes/mythical_labyrinth_escape/templates/puzzle3.html
+++ b/themes/mythical_labyrinth_escape/templates/puzzle3.html
@@ -23,7 +23,7 @@
     <!-- Title Nav Bar-->
     <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav" style="background-color:black; opacity:60%;">
         <div class="container">
-            <span class="navbar-brand js-scroll-trigger" href="#page-top">Enchanted Forest 3/3</span>
+            <span class="navbar-brand js-scroll-trigger" href="#page-top">Mythical Labyrinth Escape 3/3</span>
 
                     <!-- Timer Placeholder -->
                     <li class="nav-item mx-0 mx-lg-1">
