--- a/Themes/mythical_labyrinth_escape/templates/success_puzzle2.html
+++ b/Themes/mythical_labyrinth_escape/templates/success_puzzle2.html
@@ -28,6 +28,7 @@
                 <!-- Timer Placeholder -->
                 <li class="nav-item mx-0 mx-lg-1">
                     <a id="timer" class="btn btn-outline-light mx-1 text-white"> {{ request.session.timer }}</a>
+                    <a class="btn btn-outline-light mx-1" href="/virtual_escape_room/logout">Log Out</a>
                 </li>
     </div>
     </nav>
