--- a/themes/mythical_labyrinth_escape/templates/puzzle3.html
+++ b/themes/mythical_labyrinth_escape/templates/puzzle3.html
@@ -28,6 +28,7 @@
                     <!-- Timer Placeholder -->
                     <li class="nav-item mx-0 mx-lg-1">
                         <a id= "timer" class="btn btn-outline-light mx-1 text-white"> {{ request.session.timer }}</a>
+                        <a class="btn btn-outline-light mx-1" href="/virtual_escape_room/logout">Log Out</a>
                     </li>
         </div>
     </nav>
@@ -46,35 +47,35 @@
     <!-- Middle Content-->
     <div class="puzzle-container text-center">
                 <div class="col-sm-3 row" style="display:inline-block;">
-                    <div id="left" class="bg-light text-center text-dark ml-2" style="height:100px; width:100%; display:inline-block;">
-                        <div>
+                    <div id="left" class="bg-dark text-center text-light ml-2" style="height:100px; width:100%; display:inline-block;">
+                        <div class="mt-2">
                             <input type='button' class='toggleBtn' value='Show Hint'>
                             <div class="textDiv"> </div>
                         </div>
                     </div>
-                    <div id="left" class="col-sm-12 bg-light text-center text-dark ml-2" style="height:300px; width:100%; display:inline-block;">
+                    <div id="left" class="col-sm-12 bg-dark text-center text-light ml-2" style="width:100%; display:inline-block;">
                         <div>{{puzzle.story}}</div>
                     </div>
-                    <div id="left" class="col-sm-12 bg-light text-center text-dark ml-2" style="height:150px; width:100%; display:inline-block;">
-                        <div>Inventory</div>
+                    <div id="left" class="col-sm-12 bg-dark text-center text-light ml-2" style="height:150px; width:100%; display:inline-block;">
+                        <div class="mt-2">Inventory</div>
                         <div class="h100 text-center">
-                            <a class="btn btn-outline-dark mx-1" href="#!"><i class="fab fa-fw"></i></a>
-                            <a class="btn btn-outline-dark mx-1" href="#!"><i class="fab fa-fw"></i></a>
-                            <a class="btn btn-outline-dark mx-1" href="#!"><i class="fab fa-fw"></i></a>
+                            <a class="btn btn-outline-light mx-1" href="#!"><i class="fab fa-fw"></i></a>
+                            <a class="btn btn-outline-light mx-1" href="#!"><i class="fab fa-fw"></i></a>
+                            <a class="btn btn-outline-light mx-1" href="#!"><i class="fab fa-fw"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-8 row" style="display:inline-block; vertical-align:top;">
-                    <div class="col-sm-12 d-inline-block bg-light text-dark ml-2" style="height:400px;">
+                    <div class="col-sm-12 d-inline-block bg-dark text-light ml-2" style="height:400px;">
                         Puzzle Three:
                         <br>
                         <img src="{% static '/images/gnomes.jpg' %}" alt="3 gnomes riddle">
                     </div>
-                    <div class="col-sm-12 bg-light text-dark ml-2">
-                        <div class="col-sm-4 d-inline-block bg-light text-dark ml-2" style="height:150px;">
+                    <div class="col-sm-12 bg-dark text-light ml-2">
+                        <div class="col-sm-4 d-inline-block bg-dark text-light ml-2" style="height:150px;">
                             <p>{{puzzle.question}}</p>
                         </div>
-                        <div class="col-sm-4 d-inline-block bg-light text-dark ml-2" style="height:150px;">
+                        <div class="col-sm-4 d-inline-block bg-dark text-light ml-2" style="height:150px;">
                             <form action="{{puzzle.id}}/answer" method="POST">
                                 {% csrf_token %}
                                 <input type="text" id="answer" name="answer">
